# ChangeLog for www-apps/sugarcrm
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  17 Apr 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  +sugarcrm-6.0_beta1.ebuild:
  add hardmasked ebuild - only for testing && investigate new feature :)

*sugarcrm-6.0_beta1 ( 17 Apr 2010 )

  02 Apr 2010; A. Vinogradov <spamslepnoga@inbox.ru> -sugarcrm-5.5.0.ebuild:
  remove old ebuild

*sugarcrm-5.5.1 ( 28 Mar 2010 )

  28 Mar 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  -sugarcrm-5.5.1_rc3.ebuild, +sugarcrm-5.5.1.ebuild:
  bump

*sugarcrm-5.5.1_rc3 ( 18 Mar 2010 )

  18 Mar 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  +sugarcrm-5.5.1_rc3.ebuild:
  RC3 add

  08 Dec 2009; A. Vinogradov <spamslepnoga@inbox.ru> sugarcrm-5.5.0.ebuild:
  delete mysql depends

  06 Dec 2009; A. Vinogradov <spamslepnoga@inbox.ru> sugarcrm-5.5.0.ebuild:
  fix depend logic

  06 Dec 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  -sugarcrm-5.5.0_rc4.ebuild, +sugarcrm-5.5.0.ebuild:
  new release

*sugarcrm-5.5.0 ( 06 Dec 2009 )

  17 Nov 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  sugarcrm-5.5.0_rc4.ebuild:
  add include dit to serverowned

  16 Nov 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  sugarcrm-5.5.0_rc4.ebuild:
  fix slot definition

  14 Nov 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  -sugarcrm-5.5.0_beta2.ebuild, -sugarcrm-5.5.0_beta2-r1.ebuild,
  +sugarcrm-5.5.0_rc4.ebuild:
  RC4 version

  14 Nov 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  -sugarcrm-5.5.0_beta2.ebuild, -sugarcrm-5.5.0_beta2-r1.ebuild:
  del old beta version

  11 Oct 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  +sugarcrm-5.5.0_beta2-r1.ebuild:
  fix depend logic

  18 Sep 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  -sugarcrm-5.5.0_beta1-r2.ebuild, sugarcrm-5.5.0_beta2.ebuild:
  delete beta1 ebuild

  18 Sep 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  sugarcrm-5.5.0_beta1-r2.ebuild, sugarcrm-5.5.0_beta2.ebuild:
  fix slot

  09 Sep 2009; A. Vinogradov <spamslepnoga@inbox.ru>