@@ -1,6 +1,7 @@
 AUX postinstall-en.txt 271 RMD160 add1e5127a92ce1bea1c867a6bab4d49467b2b5f SHA1 1966f3c2f815276a5d25e90f5841b152c8131419 SHA256 674d1bb821b4dc9b64880e12b0e8ca62f439128d92c936e4337782be6b5d9878
 DIST SugarCE-5.5.1.zip 14452352 RMD160 610f9509996ded74f18f22155a319c2327c6f399 SHA1 cd1b1642d737799f61c62d1050cda54f9002bec4 SHA256 75aac87d5a73d3df17b15e65b067a5d3b81bcba48e1cadde6c9155198c2323a3
-EBUILD sugarcrm-5.5.1.ebuild 1754 RMD160 4b69a986204d0ac34f0dbd591474ecb491789112 SHA1 a97767c3adb6ff0788c5812de58eaad40295f273 SHA256 b601ccdc8a0fe7db256639ecc3294d6815a8ec54352f2d2f7c925eecc38eedc3
-EBUILD sugarcrm-6.0_beta1.ebuild 1626 RMD160 936eab0178910f921e65edd65e5f84fa7993cc68 SHA1 27972f10700da94b708b8997443223c666f172f3 SHA256 ce83a4e5608bb737303e82eaef5cb8dbe8ca0e62bffacc33be3d91fb6d23f6e4
-MISC ChangeLog 2617 RMD160 b5984b661349541fb5312b0288b689c50b188c7c SHA1 f46f5e5f79b8a902c3d9aa0330df6ef2cfded94c SHA256 ee78324adbb257447874556f1125756e973f9f2be12bffa5262870d0d86cbf65
+DIST SugarCE-6.0.0beta1.zip 15878296 RMD160 e7d393972b542ae847f83a630a58f0517062cc36 SHA1 ee61f394a2f420eef9d78feafae38e9d147751ab SHA256 b63771187f14c3a29714975184521cb2f6c7cf62841cfa23e46fb8ab94b27bf9
+EBUILD sugarcrm-5.5.1.ebuild 1754 RMD160 ba9b1383ce151aebcd2bd7c22294ef7862e01263 SHA1 67e55ab46d78cefe7bc87a71ca2b4596bc135830 SHA256 c55d4a6a88d252df8807dd1b275a46e8088fe03cbb786f55260c17bf4edbb862
+EBUILD sugarcrm-6.0_beta1.ebuild 1624 RMD160 af294e19f834970bc1bb880ecb9fc319b259a46c SHA1 69da0d9ecdb8877acd7e1e13f50e5fd303741dd1 SHA256 4a96e57a626e6c8dbef8434b5c728765767fd1ad2e54057bb79db4a8d34fd9ad
+MISC ChangeLog 2737 RMD160 7cdd04f978ed0a02806cda2c02460e9620b480fa SHA1 7ae0d986099c391cdce550e22571801b51508bf6 SHA256 ab1aae0be852a0316714e6fa051c9c59c536f9944c4aa10d490ea40952e5bc7d
 MISC metadata.xml 284 RMD160 1019fd51daed9c34a494761014d60eb606421a0b SHA1 12c23784f913732db6c55b500655b99e7282d009 SHA256 bd0ec6d455161a96149013a599770f7d2827bbdc94357f538f0050b1e6b8cdc6
